[package]
name = "rocket_conditional_attach"
version = "0.1.0"
authors = ["Jacob Pratt <the.z.cuber@gmail.com>"]
edition = "2018"
description = "Conditionally attach a fairing"
keywords = ["rocket", "fairing", "conditional"]
license = "MIT OR Apache-2.0"
maintenance = { status = "passively-maintained" }
documentation = "https://docs.rs/rocket_conditional_attach"
homepage = "https://github.com/jhpratt/rocket_conditional_attach"
repository = "https://github.com/jhpratt/rocket_conditional_attach"

[dependencies]
rocket = "0.4"
